<resources>
    <string name="app_name">Lab3</string>
    <string name="button1" />
    <string name="button0">0</string>
    <string name="button2">2\n</string>
    <string name="button3">3</string>
    <string name="button4">4\n</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button01">1</string>
    <string name="buttondivide">\\u00F7</string>
    <string name="buttonmultiply">u00D7\n</string>
    <string name="buttonplus">+</string>
    <string name="buttonminus">-</string>
    <string name="buttondivide01">\"\\u00F7\"</string>
    <string name="buttondivide001">/</string>
    <string name="buttonmultiply01">*</string>
</resources>