<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/buttonrow01"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="3" />

            <Button
                android:id="@+id/buttonplus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="+"
                tools:text="@string/buttonplus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonrow02"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="6" />

            <Button
                android:id="@+id/buttonminus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="-"
                android:onClick="onClickFunctionButton"
                tools:text="@string/buttonminus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonrow03"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="8"
                android:onClick="onClickNumBtn"
                tools:text="@string/button01" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="9" />

            <Button
                android:id="@+id/buttondivide"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="/"
                android:onClick="onClickFunctionButton"
                tools:text="@string/buttondivide001" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonrow04"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonclear"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnClrClick"
                android:text="C" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="0" />

            <Button
                android:id="@+id/buttondecimal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="onClickNumBtn"
                android:text="." />

            <Button
                android:id="@+id/buttonmultiply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="*"
                android:onClick="onClickFunctionButton"
                tools:text="@string/buttonmultiply01" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonequals"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:onClick="onClickFunctionButton"
            android:text="=" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>